# quanta-ray-tracing-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  compile.ps1
app/: CMakeLists.txt  main.cpp
app/src/: Application.cpp  Application.hpp  ImGUI.cpp  ImGUI.hpp  Image.cpp  Image.hpp  InputManager.cpp  InputManager.hpp  Random.cpp  Random.hpp  SceneManager.cpp  SceneManager.hpp  Singleton.hpp  StandardIncludes.hpp  VK_Initializers.cpp  VK_Initializers.hpp  VK_Pipeline.cpp  VK_Pipeline.hpp  VK_Types.cpp  VK_Types.hpp  VulkanBackend.cpp  VulkanBackend.hpp  WindowController.cpp  WindowController.hpp  main.cpp
app/src/scene/: default_scene.xml  metal_scene.xml  simple_default_scene.xml
app/src/shaders/: debug.frag  debug.frag.spv  debug.vert  debug.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
app/src/utils/: Utilities.cpp  Utilities.hpp
core/: CMakeLists.txt
core/src/: Application.cpp  Application.hpp  Image.cpp  Image.hpp  InputManager.cpp  Resolution.hpp  SceneManager.cpp  SceneManager.hpp  StandardIncludes.hpp  VK_Pipeline.hpp  VK_Types.cpp  VulkanBackend.cpp  VulkanBackend.hpp  WindowController.cpp  WindowController.hpp
core/src/scene/: default_scene.xml  lambertian_scene.xml  metal_scene.xml  simple_default_scene.xml
core/src/shaders/: debug.frag  shader.vert.spv
core/src/utils/: Utilities.cpp  Utilities.hpp
editor/: CMakeLists.txt  ImGuiHelpers.cpp  ImGuiHelpers.hpp  editor.cpp  editor.hpp  main.cpp
quanta/: CMakeLists.txt  quanta.cpp  quanta.hpp  quanta_types.hpp  vector3.hpp
quanta/scene/: Materials.hpp  Scene.hpp  Shapes.hpp
quanta/utilities/: Color.hpp  Random.hpp
quantaRT-cpu/: CMakeLists.txt  quanta.cpp  quanta.hpp  quanta_types.hpp
quantaRT-cpu/scene/: Scene.hpp  Shapes.hpp
quantaRT-cpu/utilities/: Color.hpp  Interval.hpp  Random.hpp
render_data/: CMakeLists.txt  render_data.hpp
runtime/: CMakeLists.txt  Runtime.cpp  Runtime.hpp  main.cpp
vmath/: CMakeLists.txt  types.hpp  vector2.hpp  vector3.hpp  vector4.hpp
